# market-model-al

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: features.yaml  simulation.yaml  tariff_changes.yaml
docs/: index.html
notebooks/: 01_oracle.py  01_shap_interaction_analysis.py  02_copula.py  02_oracle_engine_smoke.py  03_profile_generator_smoke.py  04_build_pool.py  04_build_warm_start.py  05_al_simulation.py  06_segment_summary.py
outputs/al_results/: cube_market.parquet  disruption_cp.parquet  disruption_gauss.parquet  error_based_cp.parquet  error_based_gauss.parquet  informed_market.parquet  random_cp.parquet  random_cp_restart.parquet  random_gauss.parquet  random_gauss_restart.parquet  random_market.parquet  results.parquet  segment_adaptive_cp.parquet  segment_adaptive_cp_restart.parquet  segment_adaptive_gauss.parquet  segment_adaptive_gauss_restart.parquet  uncertainty_cp.parquet  uncertainty_gauss.parquet
src/market_model_al/: al_loop.py  base_oracle.py  competitor_model.py  config.py  constraints.py  cube_sampling.py  features.py  features_config.py  oracle_engine.py  perturbed_oracle.py  profile_generator.py  segments.py  strategies.py
