[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanny-model"
version = "0.1.0"
description = "Active learning simulation using freMTPL2 as a proxy for competitor model scraping in non-life pricing"
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.0",
    "shap>=0.44",
    "pandas>=2.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.4",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
