[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanny-model"
version = "0.1.0"
description = "Active learning simulation using freMTPL2 as a proxy for competitor model scraping in non-life pricing"
requires-python = ">=3.9"
dependencies = [
    "nannyml>=0.13",
    "lightgbm>=3.3",
    "shap>=0.40",
    "pandas>=1.5",
    "numpy>=1.23",
    "matplotlib>=3.5",
    "seaborn>=0.12",
    "scikit-learn>=1.1",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
