[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "market-model-al"
version = "0.1.0"
description = "Active learning simulation for non-life pricing: recovering a competitor's pricing engine from scraped quotes"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.30",
    "lightgbm>=3.3",
    "shap>=0.40",
    "pandas>=1.5",
    "numpy>=1.23",
    "matplotlib>=3.5",
    "seaborn>=0.12",
    "scikit-learn>=1.1",
    "plotly>=5.0",
    "pyyaml>=6.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
